v10.4.0/_sources/generated/pcdsdevices.crix_motion.QuadraticBeckhoffMotor.rst.txt
pcdsdevices.crix\_motion.QuadraticBeckhoffMotor
===============================================

.. currentmodule:: pcdsdevices.crix_motion

.. autoclass:: QuadraticBeckhoffMotor

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - calc
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - hinted
          - 
    
        * - real
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - 
          - 
          - omitted
          - 
    
        * - user_readback
          - :class:`~pcdsdevices.signal.InternalSignal`
          - 
          - 
          - omitted
          - 
    
        * - user_setpoint
          - :class:`~pcdsdevices.signal.InternalSignal`
          - 
          - 
          - omitted
          - 
    
        * - high_limit_travel
          - :class:`~pcdsdevices.signal.InternalSignal`
          - 
          - 
          - omitted
          - 
    
        * - low_limit_travel
          - :class:`~pcdsdevices.signal.InternalSignal`
          - 
          - 
          - omitted
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_single
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: forward
    .. automethod:: get
    .. automethod:: inverse
    .. automethod:: move
    .. automethod:: move_single
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_current_position
    .. automethod:: set_defaults
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: to_pseudo_tuple
    .. automethod:: to_real_tuple
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: composite_egu
    .. autoattribute:: concurrent
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: pseudo_positioners
    .. autoattribute:: real_position
    .. autoattribute:: real_positioners
    .. autoattribute:: sequential
    .. autoattribute:: settle_time
    .. autoattribute:: subscriptions
    .. autoattribute:: target
    .. autoattribute:: timeout
    
    